# picochess-docker

./: .dockerignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  install-picochess-on-raspberrypi.sh  picochess.ini.example  picochess.py  pyproject.toml
dbsrv/: README.md  create_index_csv_from_pgn.py  dbsrv.py  gamesdb.py
dbsrv/chess/: polyglot.py
openingbookserver/: README.md  obooksrv.py
openingbookserver/chess/: __init__.py
uci/: write.py
web/picoweb/static/js/: app.js
