[tool.poetry]
name = "picochess"
version = "6.2"
description = "A Python3-based chess software."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typing_extensions = "4.5.0"
bluepy = "1.3.0"
ConfigArgParse = "1.5.3"
Flask = "2.3.2"
paramiko = "3.1.0"
pyserial = "3.4"
python-chess = "0.23.10" # will be replaced by chess = "1.10.0"
pyOpenSSL = "22.1.0"
requests = "2.21.0"
spur = "0.3.23"
tornado = "4.5.1"
configobj = "5.0.8"
geopy = "2.3.0"
astral = "3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
